src-tauri/tests/snapshots/pipeline_streams__stream_replay@kimi__error-mid-turn.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/kimi/error-mid-turn.jsonl
---
line_count: 5
checkpoint_count: 1
checkpoints:
  - line_index: 3
    event_type: error
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 3
persisted_turns:
  turn_count: 1
  total_blocks: 2
  turns:
    - role: assistant
      block_types:
        - text
        - tool
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - text
        - tool-call
