src-tauri/tests/snapshots/pipeline_streams__stream_replay@kimi__tool-update-before-call.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/kimi/tool-update-before-call.jsonl
---
line_count: 6
checkpoint_count: 1
checkpoints:
  - line_index: 5
    event_type: kimi/turn_complete
    roles:
      - assistant
    last_part_types:
      - tool-call
      - text
final_state:
  message_count: 1
  roles:
    - assistant
  total_parts: 2
persisted_turns:
  turn_count: 1
  total_blocks: 2
  turns:
    - role: assistant
      block_types:
        - tool
        - text
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - tool-call
        - text
